--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.13.0"
+    "@stencil/core": "^2.13.0",
+    "stencil": "^0.0.5"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
